<resources>
    <string name="app_name" translatable="false">Jami</string>
    <string name="app_author" translatable="false">Savoir-faire Linux Inc.</string>
    <string name="app_release" translatable="false">Euclid - %1$s</string>
    <string name="app_website" translatable="false">https://jami.net</string>
    <string name="app_website_contribute" translatable="false"><u>https://jami.net/contribute</u></string>
    <string name="gnu_license_website" translatable="false">https://www.gnu.org/licenses/gpl.html</string>
    <string name="savoirfairelinux_website" translatable="false">https://savoirfairelinux.com</string>
    <string name="copyright" translatable="false">2004–2025 Savoir-faire Linux Inc.</string>
    <string name="submit_issue_title">Submit issue</string>
    <string name="submit_issue_action_description"><u>Create new issue</u></string>
    <string name="submit_issue_link" translatable="false">https://git.jami.net/savoirfairelinux/jami-client-android/issues</string>
    <string name="section_license">License</string>
    <string name="switch_conversation">Switch conversation</string>
    <string name="delete_conversation_confirmation">Are you sure you want to delete this conversation?</string>
    <string name="acc_profile_photo_capture">Capture photo</string>
    <string name="view_switch_camera">Switch camera</string>
    <string name="sponsor_section">Jami is free software developed and supported by</string>
    <string name="copyright_section">Copyright</string>
    <string name="contribute_section">Contribute</string>
    <string name="version_section">Version</string>
    <string name="no_browser_app_installed">No web browser app found, install one to view this page.</string>
    <string name="website_chooser_title">View website using…</string>
    <string name="license">This software is provided \"as is\", without warranty of any kind. For details, see <u>GNU General Public License version 3 or later</u></string>
    <string name="description">Jami is free software for universal communication which respects the freedoms and privacy of its users.</string>
    <string name="channels_tab">Channels</string>
    <string name="channels_title">Your Channels</string>
    <string name="channels_empty">No contacts in this channel.</string>
    <string name="channels_members_count">%1$s · %2$d members</string>
    <string name="channels_add">Add channel</string>
    <string name="channels_edit">Edit channel</string>
    <string name="channels_delete">Delete</string>
    <string name="channels_delete_confirmation">Delete the Channel “%1$s”?</string>
    <string name="channels_name_hint">Channel name</string>
    <string name="channels_send_message">Message all</string>
    <string name="channels_message_hint">Message</string>
    <string name="channels_message_sent">Message sent to channel members</string>
    <string name="channels_file_requires_swarm">File broadcast is unavailable for a legacy one-to-one conversation.</string>
    <string name="channels_account_changed">The Channel account is unavailable or changed; reopen the Channel with the original account.</string>
    <string name="channels_deleted">This Channel no longer exists.</string>
    <string name="channels_loading">Loading Channel…</string>
    <string name="channels_load_error">Unable to load this Channel.</string>
    <string name="channels_update_error">Unable to update Channels.</string>
    <string name="channels_send_error">Unable to send to this Channel.</string>
    <string name="channels_name_required">Enter a Channel name.</string>
    <string name="channels_name_exists">A Channel already has this name.</string>
    <string name="channels_create_group">Create group</string>
    <string name="channels_membership">Channels</string>
    <string name="channels_updated">Channels updated</string>
    <string name="conversation_creation_error">Unable to create the conversation</string>
    <string name="conversations">Conversations</string>
    <string name="groups_tab">Groups</string>
    <string name="channels_active">Channel: %1$s</string>
    <string name="channels_select">Select Channel</string>
    <plurals name="channels_recipients">
        <item quantity="one">%d recipient</item>
        <item quantity="other">%d recipients</item>
    </plurals>
    <string name="channels_manage">Manage Channels</string>
    <string name="channels_send_to_channel">Send a message to the channel</string>
    <string name="channels_no_members">This channel has no members</string>
    <string name="channels_no_groups">No groups in this channel yet</string>
    <string name="channels_no_conversations">No conversations in this channel yet</string>
    <string name="credits">Credits</string>
    <string name="pip_title">Jami Conference</string>
    <string name="call_service_description">This service is necessary to keep your calls running in the foreground. It only runs during calls.</string>
    <string name="data_transfer_service_description">This service is necessary to display persistent notifications during file transfers. It only runs during file transfers.</string>
    <string name="thank_note">We would like to thank our contributors, whose efforts over many years have made this software what it is.</string>
    <string name="developers">Developers</string>
    <string name="media">Media</string>
    <string name="community_management">Community Management</string>
    <string name="special_thanks">Special thanks to</string>
    <string name="credits_developer" translatable="false">
        Abhishek Ojha
        \nAdrien Béraud
        \nAlassane Yattara
        \nAlbert Babí
        \nAlexander Lussier-Cullen
        \nAlexandr Sergheev
        \nAlexandre Eberhardt
        \nAlexandre Lision
        \nAlexandre Savard
        \nAlexandre Viau
        \nAline Bonnet
        \nAline Gondim Santos
        \nAlireza Toghiani
        \nAmin Bandali
        \nAmirHossein Naghshzan
        \nAmna Snene
        \nAndreas Hatziiliou
        \nAndreas Traczyk
        \nAnthony Léonard
        \nBrando Tovar
        \nCapucine Berthet
        \nCharles-Francis Damedey
        \nChristophe Villemer
        \nCyrille Béraud
        \nDorina Mosku
        \nEden Abitbol
        \nÉdric Milaret
        \nÉloi Bail
        \nEmma Falkiewitz
        \nEmmanuel Lepage-Vallée
        \nEmmanuel Milou
        \nEric Bjarstal
        \nFadi Shehadeh
        \nFélix Boucher
        \nFranck Laurent
        \nFrançois-Simon Fauteux-Chapleau
        \nFrédéric Guimont
        \nGuillaume Heller
        \nGuillaume Roguez
        \nHadrien De Sousa
        \nHugo Lefeuvre
        \nHussein Abdallah
        \nIlyas Erdogan
        \nIo Daza-Dillon
        \nJérôme Lamy
        \nJulien Grossholtz
        \nJulien Robert
        \nKateryna Kostiuk
        \nKessler DuPont-Teevin
        \nLanius-collaris
        \nLarbi Gharib
        \nLéo Banno-Cloutier
        \nLéopold Chappuis
        \nLiam Courdoson
        \nLoïc Siret
        \nLouis Maillard
        \nMathéo Joseph
        \nMaxim Cournoyer
        \nMichel Schmit
        \nMingrui Zhang
        \nMohamed Amine Younes Bouacida
        \nMohamed Chibani
        \nNghia Dam
        \nNicolas Jäger
        \nNicolas Reynaud
        \nNicolas Vengeon
        \nOlivier Gregoire
        \nOlivier Soldano
        \nPage Magnier-Slimani
        \nPatrick Keroulas
        \nPavan Koushik Nellore
        \nPeymane Marandi
        \nPhilippe Gorley
        \nPierre Duchemin
        \nPierre Lespagnol
        \nPierre Nicolas
        \nRaphaël Brulé
        \nRawaha El Houssayni
        \nRayan Osseiran
        \nRomain Bertozzi
        \nSaher Azer
        \nSamuel Kayode
        \nSébastien Blin
        \nSeva Ivanov
        \nSilbino Gonçalves Matado
        \nSimon Désaulniers
        \nSimon Zeni
        \nStepan Salenikovich
        \nThibault Wittemberg
        \nThomas Ballasi
        \nTrevor Tabah
        \nVitalii Nikitchyn
        \nVsevolod Ivanov
        \nXavier Jouslin de Noray
        \nYang Wang
        \nZiwei Wang</string>
    <string name="credits_media" translatable="false">
        Charlotte Hoffmann
        \nMarianne Forget</string>
    <string name="credits_communitymanagement" translatable="false">
        Dorina Mosku
        \nCabrel Tambue
        \nLoïc Bogino</string>
    <string name="credits_specialthanks" translatable="false">
        Anna
        \nElys
        \nVeroJeanLuc</string>
    <string name="end_note">This is a list of people who have made a significant investment of time, with useful results, into Jami. Any such contributors who wish to be added to the list should contact the Jami team at contact@jami.net.</string>
    <string name="error_no_network">No network connectivity</string>
    <string name="error_account_offline">The account is offline</string>
    <string name="ab_action_chat">Text messaging</string>
    <string name="menu_item_contact_request">Contact requests</string>
    <string name="menu_item_accounts">Manage accounts</string>
    <string name="menu_item_account">Manage account</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_app_settings">App Settings</string>
    <string name="menu_item_account_settings">Account Settings</string>
    <string name="menu_item_extension_list">Extensions Settings</string>
    <string name="menu_item_share">Share my account</string>
    <string name="menu_item_about">About Jami</string>
    <string name="video_setting_title">Video Settings</string>
    <string name="dial_number">Dial number</string>
    <string name="invitation_card_title">Invitations received</string>
    <plurals name="home_conferences_title">
        <item quantity="one">%d Conversation</item>
        <item quantity="other">%d Conversations</item>
    </plurals>
    <string name="searchbar_hint">Search or add</string>
    <string name="choose_number">Choose a number</string>
    <string name="ab_action_audio_call">Start audio call</string>
    <string name="ab_action_video_call">Start video call</string>
    <string name="conversation_details">Conversation details</string>
    <string name="conversation_search_hint">Search conversation</string>
    <string name="audio_recording_in_progress">Recording…</string>
    <string name="audio_recording_send">Send</string>
    <string name="audio_recording_stop">Stop recording</string>
    <string name="audio_recording_extend">Continue recording</string>
    <string name="audio_recording_restart">Record again</string>
    <string name="audio_recording_delete">Discard</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_new_password_repeat">Confirm new password</string>
    <string name="menu_file_open">Open file</string>
    <string name="menu_file_save">Save file</string>
    <string name="menu_file_delete">Delete file</string>
    <string name="menu_file_share">Share file</string>
    <string name="wizard_status_optional">Optional</string>
    <string name="wizard_password_placeholder">Choose a password to encrypt the account key on this device</string>
    <string name="wizard_password_skip">Create account</string>
    <string name="wizard_password_switch">Encrypt account with password</string>
    <string name="wizard_password_warning">Note that the password cannot be recovered</string>
    <string name="peer_services_title">Shared Services</string>
    <string name="shared_services_empty">No services configured</string>
    <string name="shared_services_add">Add service</string>
    <string name="shared_services_empty_subtitle">Share local files or services with Jami users</string>
    <string name="shared_services_disconnect_all">Disconnect all</string>
    <string name="collab_rename">Rename</string>
    <string name="collab_history">Version history</string>
    <string name="collab_export">Export a local copy</string>
</resources>