<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/conv_action_peer_services"
        android:icon="@drawable/ic_peer_services_24"
        android:title="@string/peer_services_title"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/conv_action_audiocall"
        android:icon="@drawable/outline_call_24"
        android:title="@string/ab_action_audio_call"
        app:showAsAction="always" />

    <item
        android:id="@+id/conv_action_videocall"
        android:icon="@drawable/outline_videocam_24"
        android:title="@string/ab_action_video_call"
        app:showAsAction="always" />

    <item
        android:id="@+id/conv_contact_details"
        android:icon="@drawable/outline_person_24"
        android:title="@string/conversation_details"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/conv_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/conversation_search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|never" />

</menu>