<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/conv_action_open"
        android:icon="@drawable/baseline_open_in_new_24"
        app:showAsAction="always"
        android:title="@string/menu_file_open" />

    <item
        android:id="@+id/conv_action_share"
        android:icon="@drawable/baseline_share_24"
        app:showAsAction="always"
        android:title="@string/menu_file_share" />

    <item
        android:id="@+id/conv_action_download"
        android:icon="@drawable/baseline_file_download_24"
        android:title="@string/menu_file_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/conv_action_delete"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/menu_file_delete"
        app:showAsAction="ifRoom" />
</menu>