<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thank_note"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginHorizontal="@dimen/padding_small"
            android:layout_marginBottom="@dimen/padding_small"
            android:textColor="@color/colorOnSurface" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/developed_by"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            android:layout_margin="@dimen/padding_small"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits_developer"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginHorizontal="@dimen/padding_small"
            android:textColor="@color/colorOnSurface" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/media"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            android:layout_margin="@dimen/padding_small"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits_media"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginHorizontal="@dimen/padding_small"
            android:textColor="@color/colorOnSurface" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/community_management"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            android:layout_margin="@dimen/padding_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits_communitymanagement"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginHorizontal="@dimen/padding_small"
            android:textColor="@color/colorOnSurface" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/special_thanks"
            android:textColor="?attr/colorOnBackground"
            android:textSize="18sp"
            android:layout_margin="@dimen/padding_small" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credits_specialthanks"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginTop="@dimen/padding_small"
            android:layout_marginHorizontal="@dimen/padding_small"
            android:layout_marginBottom="@dimen/padding_small"
            android:textColor="@color/colorOnSurface" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_note"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_marginHorizontal="@dimen/padding_small"
            android:layout_marginBottom="@dimen/padding_small"
            android:textColor="@color/colorOnSurface" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>