<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_contact_search"
        android:hint="@string/searchbar_hint"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/searchbar_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <item
        android:id="@+id/menu_contact_dial"
        android:icon="@drawable/baseline_dialpad_24"
        android:title="@string/dial_number"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_overflow"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:title=""
        android:icon="@drawable/ic_baseline_more_vert"
        app:iconTint="?attr/colorControlNormal">

        <menu>

            <item android:id="@+id/menu_account_settings"
                app:showAsAction="ifRoom"
                android:icon="@drawable/baseline_account_settings_24dp"
                android:title="@string/menu_item_account_settings" />

            <item android:id="@+id/menu_advanced_settings"
                app:showAsAction="ifRoom"
                android:icon="@drawable/baseline_advanced_settings_24dp"
                android:title="@string/menu_item_advanced_settings" />

            <item android:id="@+id/menu_about"
                app:showAsAction="ifRoom"
                android:iconTintMode="src_in"
                android:icon="@drawable/ic_jami_24"
                android:title="@string/menu_item_about" />

        </menu>

    </item>

</menu>