<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/wizard_card_radius"
    tools:context="cx.ring.account.AccountWizardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/wizard_card_padding"
        android:paddingTop="@dimen/wizard_card_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:text="@string/wizard_password_switch"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_status_optional"
                android:padding="6dp"
                android:text="@string/wizard_status_optional"
                android:textColor="@color/white"
                android:textSize="@dimen/wizard_text_size"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/ring_password_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:checked="false"
            android:text="@string/wizard_password_placeholder" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/placeholder"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:alpha="0.3"
                android:src="@drawable/baseline_lock_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_txt_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password,newPassword"
                    android:hint="@string/prompt_new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ring_password_repeat_txt_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:visibility="gone"
                android:layout_below="@id/password_txt_box"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ring_password_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password,newPassword"
                    android:hint="@string/prompt_new_password_repeat"
                    android:imeActionLabel="@string/action_create_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/wizard_password_warning" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create_account_password"
            style="@style/WizardButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/wizard_password_skip"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
