<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (C) 2004-2025 Savoir-faire Linux Inc.
  ~
  ~  This program is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  This program is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="16dp"
    android:paddingBottom="24dp">

    <TextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/audio_recording_in_progress"
        android:textAppearance="?attr/textAppearanceBodySmall"
        android:textColor="?android:attr/textColorSecondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@drawable/rounded_background">

        <com.google.android.material.button.MaterialButton
            style="?attr/materialIconButtonStyle"
            android:id="@+id/primary_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/audio_recording_stop"
            app:icon="@drawable/baseline_pause_24"
            android:layout_marginStart="8dp"/>

        <cx.ring.views.WaveformView
            android:id="@+id/waveform"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="00:00"
            android:layout_marginEnd="8dp"
            android:textAppearance="?attr/textAppearanceSubtitle2" />

        <com.google.android.material.button.MaterialButton
            style="?attr/materialIconButtonStyle"
            android:id="@+id/extend_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/audio_recording_extend"
            app:icon="@drawable/mic_add_24px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="?attr/materialIconButtonStyle"
            android:id="@+id/delete_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/audio_recording_delete"
            app:icon="@drawable/baseline_delete_24"
            app:iconTint="@color/red_300" />

        <com.google.android.material.button.MaterialButton
            style="?attr/materialIconButtonStyle"
            android:id="@+id/restart_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/audio_recording_restart"
            app:icon="@drawable/baseline_replay_24" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            style="?attr/materialButtonTonalStyle"
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_recording_send"
            app:icon="@drawable/baseline_send_24" />

    </LinearLayout>
</LinearLayout>

